--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
     --secondary-color: #5c43f6;
     --accent-color: #bc61f3;
     --light-color: #f2f2f2;
+    --lighter-color: #d9d8e2;
     --gray-color: #f0f0f0;
+    --light-purple: #595572;
 }
 
 html, body {
