Completed home page

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ html, body {
 }
 
 .clipped-img {
-    background-image: url(./assets/nenad-novakovic-L2QB-rG5NM0-unsplash.png);
+    background-image: url(./assets/clipped-image.png);
     background-clip: text;
     color: transparent;
 }
